--- a/index.html
+++ b/index.html
@@ -27,22 +27,27 @@
                 <ul class="list-inline text-decoration-none">
 
                     <li class="list-inline-item"> <a href="/" data-toggle="tooltip" data-placement="bottom" title="instagram"><i class="fa-solid fa-camera fa-lg"></i></a></li>
-                    <li class="list-inline-item"> <a href="/" data-toggle="tooltip" data-placement="bottom" title="twitter"><i class="fa-solid fa-crow fa-lg"></i></a></li>
                     <li class="list-inline-item"> <a href="/" data-toggle="tooltip" data-placement="bottom" title="youtube"><i class="fa-solid fa-video fa-lg"></i></a></li>
                     <li class="list-inline-item"> <a href="/" data-toggle="tooltip" data-placement="bottom" title="github"><i class="fa-solid fa-code fa-lg"></i></a></li>
                 </ul>
             </div>
         </div>
         <div class="row"><div class="col-4 text-monospace scanlines" id="colmid">
-            <span>info</span>
+            <span><i class="fa-solid fa-user"></i> info</span>
             <ul class="info text-right  ">
               <li class="infoX">21</li>
-                <li class="infoX">intp</li>
-                <li class="infoX"><i class="fa-solid fa-heart"></i>&nbsp;&nbsp;music, design, games</li>
-                <li class="infoX">trilingual (ENG/KR/PH)</li>
+              <li class="infoX">intp</li>
+              <li class="infoX">sagittarius ♐</li>
+              <li class="infoX">trilingual (ENG/KR/PH)</li>
+            </ul>
+            <span><i class="fa-solid fa-heart"></i> interests</span>
+            <ul class="info text-right">
+              <li class="infoX">music packaging design</li>
+              <li class="infoX">roguelike games</li>
+              <li class="infoX">cassettes</li>
             </ul>
         </div>
-        <div class="col colscroll" id="colmid"><p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo integer malesuada nunc vel risus commodo viverra maecenas. Cras adipiscing enim eu turpis egestas pretium aenean pharetra. Sociis natoque penatibus et magnis dis parturient montes nascetur. Cursus eget nunc scelerisque viverra mauris in aliquam. </p>
+        <div class="col colscroll" id="colmid"><p> Hi, I'm a currently employed webdev primarily doing frontend and a hobbyist print designer. <br><br> I use HTML5, CSS3, lots of searching on the internet and VSCode to make sites. <br> For design work I work in Illustrator but I can work with Photoshop as well. <br><br> I'm interested in learning more about backend dev stuff as well as Python. <br><br> Other than designing prints I also dabble in editing and am in the process of making a video essay. <br><br> Most of my personal projects are inspired by the music I listen to and albums I've enjoyed. Here's a few recomendations to get into my headspace.</p>
             <span>
               <i class="fa-solid fa-compact-disc"></i>RECS
             </span>
