--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="row">
           <div class="col" id="colheader">
-            <h1 class="text-center"><span class="randomfont">MaLwArE  (new  Arin EDItIOn)‽‽‽</span></h1>
+            <h1 class="text-center"><span class="randomfont">Cyberia Cafe & Club</span></h1>
             <ul class="list-inline text-decoration-none">
 
               <li class="list-inline-item"> <a href="/" data-toggle="tooltip"
@@ -137,7 +137,7 @@
   function toggleTrans(){
     if (button.textContent === 'KR'){
       button.textContent = 'ENG';
-      txt.innerHTML = "안녕하세요, 주로 프론트엔드쪽을 맡는 웹 개발자이며 취미로도 프린트 디자인을 하고 있습니다.<br><br>HTML5, CSS3, 수십번의 인터넷 서치와 VSCode로 사이트를 만듭니다.<br>디자인 업무는 주로 Adobe Illustrator를 쓰지만 Adobe Photoshop도 응용 가능합니다.<br>저는 백앤드 일 뿐만 아니라 Python에 대해 배워볼 의향이 있습니다.<br><br>인쇄물 디자인 말고도 영상 편집도 가끔 하며 현재는 비디오 에쎄이 작업을 하고있습니다.<br><br>제가 진행한 대부분의 개인 프로젝트는 제가 듣는 음악이나 좋아하는 앨범들로부터 영감을 얻었습니다. 제 머릿속을 조금 들여다 보고 싶으시다면 추천 음악을 들어보세요."
+      txt.innerHTML = "안녕하세요, 주로 프론트엔드쪽을 맡는 웹 개발자이며 취미로도 프린트 디자인을 하고 있습니다.<br><br>HTML5, CSS3, 몇시간 가량의 인터넷 서칭과 VSCode로 사이트를 만듭니다.<br>디자인 업무는 주로 Adobe Illustrator를 쓰지만 Adobe Photoshop도 응용 가능합니다.<br>저는 백앤드 일 뿐만 아니라 Python에 대해 배워볼 의향이 있습니다.<br><br>인쇄물 디자인 말고도 영상 편집도 가끔 하며 현재는 비디오 에쎄이 작업을 하고있습니다.<br><br>제가 진행한 대부분의 개인 프로젝트는 제가 듣는 음악이나 좋아하는 앨범들로부터 영감을 얻었습니다. 제 머릿속을 조금 들여다 보고 싶으시다면 추천 음악을 들어보세요."
     }else {
       button.textContent = 'KR';
       txt.innerHTML = "Hi, I'm a currently employed webdev primarily doing frontend and a hobbyist print designer. <br><br> I use HTML5, CSS3, lots of searching on the internet and VSCode to make sites. <br> For design work I work in Illustrator but I can work with Photoshop as well. <br><br> I'm interested in learning more about backend dev stuff as well as Python. <br><br> Other than designing prints I also dabble in editing and am in the process of making a video essay. <br><br> Most of my personal projects are inspired by the music I listen to and albums I've enjoyed. Here's a few recomendations to get into my headspace."
