--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="row">
           <div class="col" id="colheader">
-            <h1 class="text-center"><span class="randomfont">Cyberia Cafe & Club</span></h1>
+            <h1 class="text-center"><span class="randomfont">Cyberia Cafe &#38; Club</span></h1>
             <ul class="list-inline text-decoration-none">
 
               <li class="list-inline-item"> <a href="/" data-toggle="tooltip"
