--- a/albumboxxp.html
+++ b/albumboxxp.html
@@ -46,26 +46,22 @@
         flex-wrap: wrap;
         justify-content: center;
     }
+    .chart-row img{
+        min-width: 150px;
+        min-height: 150px;
+        padding: 0.5vw;
+    }
     .chart-img-one img{
         width: 18vw;
         height: 18vw;
-        min-width: 250px;
-        min-height: 250px;
-        padding: 0.5vw;
     }
     .chart-img-two img{
         width: 15vw;
         height: 15vw;
-        min-width: 200px;
-        min-height: 200px;
-        padding: 0.5vw;
     }
     .chart-img-three img{
         width: 8vw;
         height: 8vw;
-        min-width: 150px;
-        min-height: 150px;
-        padding: 0.5vw;
     }
     </style>
 </head>
