--- a/albumboxxp.html
+++ b/albumboxxp.html
@@ -25,7 +25,8 @@
         display: flex;
     }
     .userbox-img img{
-        width: 150px;
+        width: 13vw;
+        min-width: 100px;
     }
     .userbox-img{
         margin: 8px;
