--- a/albumboxxp.html
+++ b/albumboxxp.html
@@ -106,21 +106,19 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-    }
-    .chart-row img{
-        min-width: 50px;
-        min-height: 50px;
-    }
-    .chart-row{
-        margin: 0 0.2vw;
+        margin: auto;
+        width: 95vw;
     }
     #row-one{
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
+        row-gap: 1em;
+        column-gap: 1em;
     }
     .chart-img-one{
         flex: 0 0 18%;
-        margin: 0.1vw 0.2vw;
+        aspect-ratio: 1/1;
     }
     .chart-img-one img{
         width: 100%;
@@ -130,6 +128,9 @@
     #row-two{
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
+        row-gap: 0.7em;
+        column-gap: 0.7em;
     }
     .chart-img-two{
         flex: 0 0 13%;
@@ -143,7 +144,9 @@
     #row-three{
         display: flex;
         flex-wrap: wrap;
-        
+        justify-content: center;
+        row-gap: 0.5em;
+        column-gap: 0.5em;
     }
     .chart-img-three{
         flex: 0 0 9%;
