--- a/albumboxxp.html
+++ b/albumboxxp.html
@@ -31,7 +31,7 @@
     }
     .bg{
         height: 25%;
-        width: 100vw;
+        width: 150vw;
         padding: 0;
         margin: 0;
         position: fixed;
@@ -39,6 +39,13 @@
         left: 0;
         z-index: -50;
     }
+
+    @media (max-width:480px){
+        .bg-wave{
+            transform: scale(1.7);
+        }
+    }
+
     h2{
         font-family: "Franklin Gothic Medium";
     }
@@ -113,8 +120,8 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        row-gap: 1em;
-        column-gap: 1em;
+        row-gap: 1vw;
+        column-gap: 1vw;
     }
     .chart-img-one{
         flex: 0 0 18%;
@@ -129,8 +136,8 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        row-gap: 0.7em;
-        column-gap: 0.7em;
+        row-gap: 0.7vw;
+        column-gap: 0.7vw;
     }
     .chart-img-two{
         flex: 0 0 13%;
@@ -145,8 +152,8 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        row-gap: 0.5em;
-        column-gap: 0.5em;
+        row-gap: 0.5vw;
+        column-gap: 0.5vw;
     }
     .chart-img-three{
         flex: 0 0 9%;
