--- a/albumboxxp.html
+++ b/albumboxxp.html
@@ -48,6 +48,9 @@
         .titlebox h2{
         font-size: 2rem;
     }
+        .title-bar-text{
+            font-size: 8pt;
+        }
     }
 
     h2{
@@ -85,6 +88,7 @@
     .userbox-buttons{
         display: flex;
         justify-content: center;
+        flex-wrap: wrap;
     }
     .userbox-buttons button{
         margin: 0.1vh;
