--- a/topster/index.html
+++ b/topster/index.html
@@ -344,7 +344,8 @@
             <div class="window-body">
                 <div class="userbox">
                     <div class="userbox-img">
-                        <img src="https://64.media.tumblr.com/e3998fa7162bb6cb5aaf057546c03d68/af992c40b299732a-38/s1280x1920/9b221d6c65ada506b9a19284dadd59ffca428842.png" alt="avatar">
+                        <a href="/about.html">
+                        <img src="https://64.media.tumblr.com/e3998fa7162bb6cb5aaf057546c03d68/af992c40b299732a-38/s1280x1920/9b221d6c65ada506b9a19284dadd59ffca428842.png" alt="avatar"></a>
                     </div>
                     <p>
                         Hi, I'm a 20 something semi-music nerd and this is my interactive(ish?) topster!
