--- a/topster/about.html
+++ b/topster/about.html
@@ -155,6 +155,7 @@
                 }
                 $('.tab').hide();
                 $('#page'+index).show();
+                console.log(index);
                 $('#backBtn').prop('disabled', false);
                 changeTitle();
             })
@@ -222,6 +223,7 @@
                     Minim deserunt fugiat aliqua eiusmod ad laborum culpa nisi dolor eiusmod veniam labore cupidatat. Laborum mollit esse reprehenderit dolore nulla nulla mollit incididunt deserunt. Esse adipisicing mollit fugiat elit laborum aliquip adipisicing aute culpa labore. Deserunt deserunt exercitation voluptate id consequat velit aute excepteur. Nulla elit laboris laboris anim amet sit tempor Lorem cupidatat voluptate culpa fugiat est. Cillum minim qui exercitation velit sint.
                     <br><br>
                     Occaecat laborum tempor veniam sint deserunt anim quis consequat aliquip commodo nisi consectetur eu Lorem. Officia dolore cupidatat amet eu in laborum magna non. Ex laboris ea non irure consequat consequat quis anim enim excepteur nulla.
+                </div>
                 <div id="page3" class="tab">
                     <img src="https://64.media.tumblr.com/8a4df961cea14fe5dd16bc4db4874ec4/ad3b2676751c553f-e2/s540x810/d9824c10455fe2e134d86bc23fd618c24bd71a77.pnj" alt="">
                 </div>
