--- a/topster/about.html
+++ b/topster/about.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ABOUT</title>
+    <link rel="icon" type="image/x-icon" href="https://em-content.zobj.net/thumbs/120/apple/325/exclamation-question-mark_2049-fe0f.png">
     <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <style>
     @import "https://unpkg.com/xp.css";
