--- a/topster/index.html
+++ b/topster/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>TOPSTER</title>
+    <link rel="icon" type="image/x-icon" href="https://em-content.zobj.net/thumbs/120/apple/325/optical-disk_1f4bf.png">
  <!--    <link rel="stylesheet" href="https://unpkg.com/xp.css"> -->
     <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
